課題4提出まで

--- a/style.css
+++ b/style.css
@@ -9,4 +9,6 @@ Tags: right-sidebar, blog
 License: GNU General Public License v3.0
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: wpbeg
+Tested up to: 6.5.4
+Requires PHP: 8.1.23
 */
